--- a/src/components/ShowReel/ShowReel.module.css
+++ b/src/components/ShowReel/ShowReel.module.css
@@ -17,6 +17,7 @@
   @apply relative w-full max-w-4xl  rounded-2xl overflow-hidden;
   box-shadow: 0 0 40px rgba(100, 100, 255, 0.1);
   height: auto;
+ 
 }
 
 .video {
@@ -26,4 +27,15 @@
 /* New style for the mute button */
 .muteButton {
   @apply absolute bottom-4 right-4 z-10 p-2 rounded-full bg-black/50 text-white backdrop-blur-sm transition-opacity hover:opacity-80;
+}
+.reactPlayer {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.videoContainer {
+  @apply relative w-full cursor-pointer;
+  /* Add padding-top to maintain a 16:9 aspect ratio */
+  padding-top: 56.25%; 
+  
 }
