--- a/src/components/portfolio-section/PortfolioSection.module.css
+++ b/src/components/portfolio-section/PortfolioSection.module.css
@@ -15,7 +15,7 @@
 } */
 
 .cardTextContent h2 {
-  @apply text-5xl font-bold text-gray-300 mb-4;
+  @apply text-8xl  text-gray-300 mb-4;
 }
 
 .cardTextContent p {
@@ -38,7 +38,7 @@
 .projectCard {
   @apply pb-4 rounded-2xl  transition-all duration-300;
   background-color: rgba(255, 255, 255, 0.03);
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(50px);
 }
 
 .projectCard:hover {
