--- a/src/components/ShowReel/ShowReel.module.css
+++ b/src/components/ShowReel/ShowReel.module.css
@@ -6,15 +6,18 @@
   flex-direction: column;
   align-items: center;
   padding: 4rem 1rem;
+  /* padding-bottom: 1rem !important; */
+  padding-top: 1rem !important;
 }
 
 .title {
-  @apply text-4xl font-semibold font-[montserrat]  tracking-widest text-gray-400 ;
-  margin-bottom: 4rem !important ;
+  @apply text-4xl font-semibold font-[montserrat]  tracking-widest text-gray-300 ;
+  margin-bottom: 1rem !important ;
+  margin-top: 3rem !important ;
 }
 
 .card {
-  @apply relative w-full max-w-4xl  rounded-2xl overflow-hidden;
+  @apply relative w-full max-w-4xl   overflow-hidden p-8 rounded-3xl;
   box-shadow: 0 0 40px rgba(100, 100, 255, 0.1);
   height: auto;
  
@@ -37,5 +40,6 @@
   @apply relative w-full cursor-pointer;
   /* Add padding-top to maintain a 16:9 aspect ratio */
   padding-top: 56.25%; 
+  overflow: hidden !important;
   
 }
