--- a/src/components/Contact-us/ContactStepper.module.css
+++ b/src/components/Contact-us/ContactStepper.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-  @apply text-center text-4xl font-bold font-[montserrat] mb-4;
+  @apply text-center text-2xl md:text-4xl font-semibold font-[montserrat] tracking-widest text-gray-300 mb-4;
 }
 
 /* --- Content inside a step --- */
