--- a/src/components/FAQ/FaqSection.module.css
+++ b/src/components/FAQ/FaqSection.module.css
@@ -18,7 +18,7 @@
 }
 
 .titleHeading {
-  @apply text-4xl lg:text-5xl font-bold text-gray-200 leading-tight;
+  @apply text-2xl md:text-4xl font-semibold font-[montserrat] tracking-widest text-gray-300 leading-tight;
 }
 
 /* === Right Accordion Column === */
