--- a/src/components/ShowReel/ShowReel.module.css
+++ b/src/components/ShowReel/ShowReel.module.css
@@ -8,7 +8,7 @@
 }
 
 .title {
-  @apply font-semibold font-[montserrat] tracking-widest text-gray-300;
+  @apply text-center text-2xl md:text-4xl font-semibold font-[montserrat] tracking-widest text-gray-300;
 }
 
 .card {
